# pure-audio

./: Cargo.toml
.github/workflows/: build.yml
examples/gain/: Cargo.toml
examples/gain-web/: Cargo.toml  build_dynamic_link.bat
examples/gain-web/src/: lib.rs
examples/gain-web/web_dynamic/: index.html
examples/gain/src/: lib.rs
examples/oscillator/: Cargo.toml
examples/oscillator-web/: .gitignore  Cargo.toml  build_dynamic_link.bat
examples/oscillator-web/src/: lib.rs
examples/oscillator-web/web_dynamic/: index.html
examples/oscillator/src/: lib.rs
pure-audio/: Cargo.toml
pure-audio-wasm/: Cargo.toml
pure-audio-wasm/src/: es_module.rs  lib.rs  loader.rs  processor.rs
pure-audio-wasm/src/audio_worklet_node/: mod.rs
pure-audio-wasm/src/audio_worklet_node/js/: instrumentAudioWorkletNode.js
pure-audio/src/: audio_data.rs  buffer.rs  event.rs  lib.rs  parameter.rs  processor.rs
