[package]
name = "pure-audio-wasm"
description = "Adapter for pure-audio processors to run as AudioWorkletNode (Web Audio)"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3.69"
pure-audio = { path = "../pure-audio" }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
  "AudioContext",
  "AudioWorklet",
  "AudioWorkletNode",
  "AudioWorkletNodeOptions",
  "Blob",
  "BlobPropertyBag",
  "ChannelCountMode",
  "console",
  "Event",
  "Url",
  'Request', 
  'RequestInit', 
  'RequestMode', 
  'Response', 
  'Window'
] }

[features]
static_linking = []
