[package]
name = "gain-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gain = { path = "../gain" }
pure-audio-wasm = { path = "../../pure-audio-wasm"}
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
  "AudioContext",
] }

[features]
build_processor = []
static_linking = ["pure-audio-wasm/static_linking"]